# TaskManager

./: .env.example  .gitignore  pyproject.toml
migrations/: env.py
src/: config.py  main.py
src/api/: dependencies.py  routers.py
src/modules/auth/: hashing.py  jwt.py  router.py
src/modules/projects/: repository.py  router.py  schemas.py
src/modules/tasks/: repository.py  router.py  schemas.py
src/modules/users/: repository.py  router.py  schemas.py
src/storages/: storage.py
src/storages/models/: __init__.py  __mixin__.py  base.py  projects.py  tasks.py  users.py
